# url-shortener

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/api/: serializers.py  services.py  tests.py  urls.py  views.py
app/config/: celery.py  settings.py  urls.py
app/shortener/: admin.py  decorators.py  forms.py  models.py  services.py  tasks.py  urls.py  views.py
app/shortener/migrations/: 0001_initial.py
app/shortener/tests/: test_forms.py  test_models.py  test_routing.py  test_services.py  test_views.py
app/templates/: base.html  url_list.html  url_new.html
docker/dev/: .env  .env.sample  Dockerfile
