[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Alex Malykh <alexeyheather@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2"
djangorestframework = "^3.12.4"
django-crispy-forms = "^1.11.2"
loguru = "^0.5.3"
mysqlclient = "^2.0.3"
django-mysql = "^3.12.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
